fix: remove z-index bug

--- a/src/components/Menu/_Menu.scss
+++ b/src/components/Menu/_Menu.scss
@@ -1,5 +1,6 @@
 @use "../../abstract/variables";
 header {
+  z-index: 1;
   position: fixed;
   top: 0;
   width: 100%;
@@ -26,7 +27,7 @@ header {
     }
     span {
       position: absolute;
-      z-index: 1;
+      z-index: 2;
       left: 0;
       top: 0.25em;
       margin-left: 2em;
